--- a/Sportstore/Views/Home/Index.cshtml
+++ b/Sportstore/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IList<Product>
+@{
+    ViewData["Title"] = "Products";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Products</h1>
 </div>
+
+@foreach (Product p in Model ?? [])
+{
+    <div>
+        <h3>@p.Name</h3>
+        @p.Description
+        <h4>@p.Price.ToString("c")</h4>
+    </div>
+}
