--- a/Sportstore/Views/_ViewImports.cshtml
+++ b/Sportstore/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Sportstore
 @using Sportstore.Models
+@using Sportstore.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Sportstore
