--- a/Sportstore/Pages/_ViewImports.cshtml
+++ b/Sportstore/Pages/_ViewImports.cshtml
@@ -1,6 +1,5 @@
-﻿@using Sportstore
+﻿@namespace Sportstore.Pages
+@using Microsoft.AspNetCore.Mvc.RazorPages
 @using Sportstore.Models
-@using Sportstore.ViewModels
 @using Sportstore.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, Sportstore
