--- a/Sportstore/Views/Home/Index.cshtml
+++ b/Sportstore/Views/Home/Index.cshtml
@@ -12,5 +12,5 @@
      page-classes-enabled="true" page-class="btn"
      page-class-normal="btn-outline-dark"
      page-class-selected="btn-primary" 
-     page-url-category = "@Model.CurrentCategory"
+     page-url-category = "@Model.CurrentCategory!"
      class="btn-group pull-right m-1"></div>
