--- a/Sportstore/Pages/Cart.cshtml
+++ b/Sportstore/Pages/Cart.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model CartModel
 
-<h2>Your cart</h2>
+<h2>Your cart - @Model.Cart.Lines.Count items</h2>
 
 <table class="table table-bordered table-striped">
     <thead>
@@ -10,11 +10,12 @@
         <th>Item</th>
         <th class="text-right">Price</th>
         <th class="text-right">Subtotal</th>
+        <th></th>
     </tr>
     </thead>
     
     <tbody>
-    @foreach (CartLine line in Model.Cart?.Lines ?? Enumerable.Empty<CartLine>()) {
+    @foreach (CartLine line in Model.Cart.Lines) {
         <tr>
             <td class="text-center">@line.Quantity</td>
             <td class="text-left">@line.Product.Name</td>
@@ -24,6 +25,15 @@
             <td class="text-right">
                 @((line.Quantity * line.Product.Price).ToString("c"))
             </td>
+            <td class="text-center">
+                <form asp-page-handler="Remove" method="post">
+                    <input type="hidden" name="ProductID" value="@line.Product.ProductID" />
+                    <input type="hidden" name="returnUrl" value="@Model?.ReturnUrl" />
+                    <button type="submit" class="btn btn-sm btn-danger">
+                        Remove
+                    </button>
+                </form>
+            </td>
         </tr>
     }
     </tbody>
@@ -32,7 +42,7 @@
     <tr>
         <td colspan="3" class="text-right">Total:</td>
         <td class="text-right">
-            @Model.Cart?.ComputeTotalValue().ToString("c")
+            @Model.Cart.ComputeTotalValue().ToString("c")
         </td>
     </tr>
     </tfoot>
